feat: Criado a roles em relacao ao Candidate feat: Criado a criacao do profile Candidate feat: Criado no CandidateController o PreAuthorize para pegar a candidaturas de acordo ao token. build: Mudando a versao da api.